desktop card element alignment fix

--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -12,8 +12,6 @@ a:visited {
 }
 
 .card-container {
-  // margin-top: clamp(3.5em, 19vw, 4.5em);
-  // min-width: 20rem;
   width: clamp(15em, 87vw, 34em);
   padding: 2rem 1.5rem;
 
@@ -22,124 +20,95 @@ a:visited {
   align-items: center;
   color: $Text;
   border-radius: 10px;
+  text-align: center;
   background-color: $Pricing_Component_Background;
   box-shadow: 0 1px 15px 5px rgba(0, 0, 0, 0.1);
-
-  .pageviews {
-    text-transform: uppercase;
-    font-size: 0.8rem;
-
-    font-weight: 800;
-    letter-spacing: 1px;
-    margin-bottom: 2.5rem;
-  }
-
-  input[type='range'] {
+  .card__price-content {
     width: 100%;
-    margin-bottom: 3em;
-    -webkit-appearance: none;
-    appearance: none;
-    // appearance: none;
-    // Style for Firefox
-    &::-moz-range-track {
-      height: 7px;
-      background-color: $Empty_Slider_Bar;
-      border-radius: 10px;
-    }
-    &::-moz-range-thumb {
-      width: 40px;
-      height: 40px;
-      border-radius: 100%;
-      border: none;
+    .pageviews {
+      text-transform: uppercase;
+      font-size: 0.8rem;
 
-      background: url(../images/icon-slider.svg) no-repeat center center / 50%,
-        $Slider_Backround;
-
-      box-shadow: 0 10px 25px hsla(174, 86%, 51%, 0.8);
-      z-index: 1;
-      cursor: pointer;
-    }
-    &::-moz-range-progress {
-      height: 7px;
-      border-radius: 10px;
-      background-color: $Full_Slider_Bar;
+      font-weight: 800;
+      letter-spacing: 1px;
+      margin-bottom: 2.5rem;
     }
 
-    // Style for chrome
-
-    &::-webkit-slider-runnable-track {
-      height: 7px;
-      outline: none;
-      border-radius: 10px;
-      background-color: $Empty_Slider_Bar;
-    }
-
-    &::-webkit-slider-thumb {
-      // position: absolute;
-      transform: translateY(-17px);
+    input[type='range'] {
+      width: 100%;
+      margin-bottom: 3em;
       -webkit-appearance: none;
-      border-radius: 100%;
-      width: 40px;
-      height: 40px;
+      appearance: none;
+      // appearance: none;
+      // Style for Firefox
+      &::-moz-range-track {
+        height: 7px;
+        background-color: $Empty_Slider_Bar;
+        border-radius: 10px;
+      }
+      &::-moz-range-thumb {
+        width: 40px;
+        height: 40px;
+        border-radius: 100%;
+        border: none;
 
-      background: url(../images/icon-slider.svg) no-repeat center center / 50%,
-        $Slider_Backround;
+        background: url(../images/icon-slider.svg) no-repeat center center / 50%,
+          $Slider_Backround;
 
-      box-shadow: 0 10px 25px hsla(174, 86%, 51%, 0.8);
-      z-index: 1;
-      cursor: pointer;
+        box-shadow: 0 10px 25px hsla(174, 86%, 51%, 0.8);
+        z-index: 1;
+        cursor: pointer;
+      }
+      &::-moz-range-progress {
+        height: 7px;
+        border-radius: 10px;
+        background-color: $Full_Slider_Bar;
+      }
+
+      // Style for chrome
+
+      &::-webkit-slider-runnable-track {
+        height: 7px;
+        outline: none;
+        border-radius: 10px;
+        background-color: $Empty_Slider_Bar;
+      }
+
+      &::-webkit-slider-thumb {
+        // position: absolute;
+        transform: translateY(-17px);
+        -webkit-appearance: none;
+        border-radius: 100%;
+        width: 40px;
+        height: 40px;
+
+        background: url(../images/icon-slider.svg) no-repeat center center / 50%,
+          $Slider_Backround;
+
+        box-shadow: 0 10px 25px hsla(174, 86%, 51%, 0.8);
+        z-index: 1;
+        cursor: pointer;
+      }
+    }
+    p,
+    ul {
+      user-select: none;
+    }
+    .price,
+    .subcriptionType {
+      margin-bottom: 2.125rem;
+    }
+
+    .price span {
+      font-size: 2.375rem;
+      font-weight: 800;
+      color: $Text_CTA_Background;
     }
   }
-
-  // .rangeSlider {
-
-  //   &::-moz-range-track {
-  //   }
-  //   width: 100%;
-  //   margin-bottom: 3em;
-  //   appearance: none;
-  //   height: 7px;
-  //   background-color: $Empty_Slider_Bar;
-  //   border-radius: 10px;
-
-  //   &::-moz-range-thumb {
-  //     -webkit-appearance: none;
-  //     appearance: none;
-  //     width: 40px;
-  //     height: 40px;
-  //     border-radius: 100%;
-  //     border: none;
-
-  //     background: url(../images/icon-slider.svg) no-repeat center center / 50%,
-  //       $Slider_Backround;
-
-  //     box-shadow: 0 10px 25px hsla(174, 86%, 51%, 0.8);
-  //   }
-
-  //   &::-moz-range-progress {
-  //     height: 100%;
-  //     border-radius: 10px;
-  //     background-color: $Full_Slider_Bar;
-  //   }
-  // }
-  p,
-  ul {
-    user-select: none;
-  }
-  .price,
-  .subcriptionType {
-    margin-bottom: 2.125rem;
-  }
-
-  .price span {
-    font-size: 2.375rem;
-    font-weight: 800;
-    color: $Text_CTA_Background;
-  }
-
   .subcriptionType {
     display: flex;
     width: 100%;
+    margin-bottom: 2.375em;
     font-size: 0.8rem;
     align-items: center;
     justify-content: center;
@@ -234,6 +203,22 @@ a:visited {
 
 @media (min-width: 48em) {
   .card-container {
+    .card__price-content {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      align-items: center;
+    }
+    .pageviews {
+      grid-area: 1/ 1/2 /2;
+      justify-self: start;
+    }
+    input[type='range'] {
+      grid-area: 2/ 1/ 3/ 3;
+    }
+    .price {
+      grid-area: 1/ 2/ 2/ 3;
+      justify-self: end;
+    }
     .subcriptionType .discountPrice .textForLargeScreen {
       display: inline;
     }
